--- a/_posts/2016-11-02-kchashdb.md
+++ b/_posts/2016-11-02-kchashdb.md
@@ -17,7 +17,7 @@ published: true
 1. 支持多进程读、多线程安全
 2. ACID
 3. read uncommitted的隔离（不知道算优点还是缺点。。。）
-4. 支持很多接口，set、get、remove、set_bulk、`get_bulk`、`remove_bulk`、add、cas、append、replace、increment、`increment_double`、copy、synchronize、`dump_snapshot`
+4. 支持很多接口，set、get、remove、`set_bulk`、`get_bulk`、`remove_bulk`、add、cas、append、replace、increment、`increment_double`、copy、synchronize、`dump_snapshot`
 
 ### 缺点：
 1. 内存管理没有mc做的好，感觉就没做什么内存管理
