--- a/_posts/2024-09-20-MySQL-Lock-1.md
+++ b/_posts/2024-09-20-MySQL-Lock-1.md
@@ -35,6 +35,8 @@ In InnoDB, a lock is placed on records accessed or modified in a transaction and
 2. Lock the target record and modify the corresponding record.
 3. Release the page latch.
 
+<img src="/public/images/2024-09-20/0.png" width="500px" />
+
 Why is this done? It’s for concurrency. Once the second step is completed in each operation, the target record is protected by a lock, preventing other concurrent transactions from modifying it. Therefore, there’s no need to continue holding the page latch for the record. Otherwise, if another transaction tries to access/modify a different record on the same page, which could otherwise be done concurrently, it would be blocked by the page latch.
 
 The lock is stored in `lock_sys->rec_hash`, and each record lock is identified in `rec_hash` by `<space_id, page_no, heap_no>`.
