update post ibdNinja

--- a/_posts/2025-01-06-ibdNinja.md
+++ b/_posts/2025-01-06-ibdNinja.md
@@ -88,13 +88,13 @@ With ibdNinja's capability to parse records, it is possible to address ibd files
 
 ### 1. Display Help Information (`--help`, `-h`)
 
-<img src="https://github.com/KernelMaker/kernelmaker.github.io/blob/master/public/images/ibdNinja-diagram/1.png" alt="image-1" width="80%" />
+<img src="/public/images/ibdNinja-diagram/1.png" alt="image-1" width="80%" />
 
 ### 2. List Tables and Indexes in the ibd File (`--list-tables`, `-l`)
 
 Using the system tablespace file **mysql.ibd** as an example, after specifying the file with the `--file` or `-f` option, the output provides:
 
-<img src="https://github.com/KernelMaker/kernelmaker.github.io/blob/master/public/images/ibdNinja-diagram/2.png" alt="image-2" width="60%" />
+<img src="/public/images/ibdNinja-diagram/2.png" alt="image-2" width="60%" />
 
 1. A summary of the ibd file, including the number of tables and indexes successfully parsed and loaded from the data dictionary.
 2. The table IDs and names of all tables in the file.
@@ -116,11 +116,11 @@ The output consists of three parts:
 
 1. **Page Summary:** Information such as sibling page numbers (left and right), the index the page belongs to, the page level, etc.
 
-<img src="https://github.com/KernelMaker/kernelmaker.github.io/blob/master/public/images/ibdNinja-diagram/3.png" alt="image-3" width="60%" />
+<img src="/public/images/ibdNinja-diagram/3.png" alt="image-3" width="60%" />
 
 2. **Record Details:** For each record in the page, details like:
 
-<img src="https://github.com/KernelMaker/kernelmaker.github.io/blob/master/public/images/ibdNinja-diagram/4.png" alt="image-4" width="60%" />
+<img src="/public/images/ibdNinja-diagram/4.png" alt="image-4" width="60%" />
 
 - Total length of the record (header + body), field count, and whether it has a delete mark.
 - A hexadecimal dump of the record header.
@@ -130,7 +130,7 @@ The output consists of three parts:
 
  Includes statistics such as:
 
-<img src="https://github.com/KernelMaker/kernelmaker.github.io/blob/master/public/images/ibdNinja-diagram/5.png" alt="image-5" width="60%" />
+<img src="/public/images/ibdNinja-diagram/5.png" alt="image-5" width="60%" />
 
 - Number, total size, and space usage percentage of valid records.
 - Number and size of records with `instant dropped columns`, as well as their space usage percentage.
@@ -142,7 +142,7 @@ The output consists of three parts:
 
 Using **mysql.ibd** again, first obtain the table and index information using the `--list-tables` (`-l`) command.
 
-<img src="https://github.com/KernelMaker/kernelmaker.github.io/blob/master/public/images/ibdNinja-diagram/6.png" alt="image-6" width="60%" />
+<img src="/public/images/ibdNinja-diagram/6.png" alt="image-6" width="60%" />
 
 For example, the `mysql.tables` table has an ID of 29 and contains 10 indexes. To analyze the `PRIMARY` index (ID 78), run:
 
@@ -150,7 +150,7 @@ For example, the `mysql.tables` table has an ID of 29 and contains 10 indexes. T
 ./ibdNinja -f ../innodb-run/mysqld/data/mysql.ibd -i 78
 ```
 
-<img src="https://github.com/KernelMaker/kernelmaker.github.io/blob/master/public/images/ibdNinja-diagram/7.png" alt="image-7" width="60%" />
+<img src="/public/images/ibdNinja-diagram/7.png" alt="image-7" width="60%" />
 
 ibdNinja traverses the `PRIMARY` index from its root page, analyzing it level by level and page by page, then summarizes the statistics:
 
@@ -178,7 +178,7 @@ Run the following command:
 ./ibdNinja -f ../innodb-run/mysqld/data/mysql.ibd -e 78
 ```
 
-<img src="https://github.com/KernelMaker/kernelmaker.github.io/blob/master/public/images/ibdNinja-diagram/8.png" alt="image-8" width="60%" />
+<img src="/public/images/ibdNinja-diagram/8.png" alt="image-8" width="60%" />
 
 The output shows the leftmost page number for each level of the index. For example:
 
@@ -244,7 +244,7 @@ Through the operations above, we constructed three different table definitions (
 
 1. **Record 1:**
 
-   <img src="https://github.com/KernelMaker/kernelmaker.github.io/blob/master/public/images/ibdNinja-diagram/9.png" alt="image-9" width="60%" />
+   <img src="/public/images/ibdNinja-diagram/9.png" alt="image-9" width="60%" />
 
    - **FIELD 1 (col_uint):** The value is `1`, inserted under table definition V1.
    - **FIELD 5 (col_varchar):** This field was defined in V1 and is part of record 1. Its value is present but marked as `!hidden!_dropped_v3_p4_col_varchar` because the column was instantly dropped in V3. Although hidden from queries, the data remains in the page.
@@ -253,7 +253,7 @@ Through the operations above, we constructed three different table definitions (
 
 2. **Record 2:**
 
-   <img src="https://github.com/KernelMaker/kernelmaker.github.io/blob/master/public/images/ibdNinja-diagram/10.png" alt="image-10" width="60%" />
+   <img src="/public/images/ibdNinja-diagram/10.png" alt="image-10" width="60%" />
 
    - **FIELD 1 (col_uint):** The value is `2`, inserted under table definition V2.
    - **FIELD 5 (col_varchar):** This column was defined in V1 and dropped in V3. Since record 2 was inserted before the drop, it still contains a value.
@@ -262,7 +262,7 @@ Through the operations above, we constructed three different table definitions (
 
 3. **Record 3:**
 
-   <img src="https://github.com/KernelMaker/kernelmaker.github.io/blob/master/public/images/ibdNinja-diagram/11.png" alt="image-11" width="60%" />
+   <img src="/public/images/ibdNinja-diagram/11.png" alt="image-11" width="60%" />
 
    - **FIELD 1 (col_uint):** The value is `3`, inserted under table definition V3.
    - **FIELD 5 and FIELD 7:** Both fields were dropped in V3. Since record 3 was inserted after the drop, these fields are empty.
@@ -271,7 +271,7 @@ Through the operations above, we constructed three different table definitions (
 
 The page analysis output highlights the following key details:
 
-<img src="https://github.com/KernelMaker/kernelmaker.github.io/blob/master/public/images/ibdNinja-diagram/12.png" alt="image-12" width="60%" />
+<img src="/public/images/ibdNinja-diagram/12.png" alt="image-12" width="60%" />
 
 - As shown in the red box of the analysis, two records in the page still contain old values for columns that were dropped.
 - The analysis shows the total size and percentage of space wasted due to these dropped columns.
